force-app/main/default/objects/Detalle_de_Fc__c/Detalle_de_Fc__c.object-meta.xml
<CustomObject>
    <label>Detalle de Fc</label>
    <nameField>
        <label>Detalle de Fc Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Detalles de Fc</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>