force-app/main/default/objects/Detalle_de_Fc__c/fields/Dias_de_Alquiler__c.field-meta.xml
<CustomField>
    <fullName>Dias_de_Alquiler__c</fullName>
    <label>Dias de Alquiler</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>