force-app/main/default/objects/Detalle_de_Fc__c/fields/Transport__c.field-meta.xml
<CustomField>
    <fullName>Transport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transport</label>
    <referenceTo>Transport__c</referenceTo>
    <relationshipLabel>Detalles de Fc</relationshipLabel>
    <relationshipName>Detalles_de_Fc</relationshipName>
    <type>Lookup</type>
</CustomField>