force-app/main/default/objects/Detalle_de_Fc__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Detalles de Fc</relationshipLabel>
    <relationshipName>Detalles_de_Fc</relationshipName>
    <type>Lookup</type>
</CustomField>